Se corriguienon ciertas cosas para poder probar los end points nuevos